apply plugin: 'com.android.application'

android {
    compileSdkVersion 33
    namespace "uk.co.jakelee.blacksmithslots"
    defaultConfig {
        applicationId "uk.co.jakelee.blacksmithslots"
        minSdkVersion 19
        targetSdkVersion apiVersion
        versionCode 22
        versionName "2.0.0"
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }
    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
        }
        debug {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
        }
    }
    tasks.withType(JavaCompile).configureEach{
        options.fork = true
        options.forkOptions.jvmArgs +=[
                '--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
                '--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
                '--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED']
    }
}

repositories {
    mavenCentral()
    maven {
        url "https://oss.sonatype.org/content/repositories/snapshots"
    }
    maven {
        url 'https://maven.google.com'
    }
}

dependencies {
    implementation project(':wheel')
    implementation project(':BaseGameUtils')
    implementation files('libs/applovin-sdk-6.4.2.jar')
    implementation "com.android.support:appcompat-v7:$supportLibraryVersion"
    implementation "com.android.support:percent:$supportLibraryVersion"
    implementation "com.google.android.gms:play-services-games:$playLibraryVersion"
    implementation "com.google.android.gms:play-services-auth:$playLibraryVersion"
    implementation 'com.google.code.gson:gson:2.8.0'
    implementation 'com.github.satyan:sugar:1.5'
    implementation 'com.squareup.picasso:picasso:2.5.2'
    implementation 'com.anjlab.android.iab.v3:library:1.0.31'
    implementation 'com.github.hotchemi:android-rate:1.0.1'
    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.1.16'
    implementation 'de.keyboardsurfer.android.widget:crouton:1.8.5@aar'
    implementation 'com.anjlab.android.iab.v3:library:1.0.40'
    implementation 'com.jakewharton:butterknife:10.2.3'
    annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.3'
    implementation 'com.scottyab:aescrypt:0.0.1'
}
